Prepare removal of deprecated features
Collect previously deprecated features for 14.4.0 changelog.

Warn user about deprecated -1/-2/-3/-4/-8 and -s/-u/-f/-A/-U/-o/
-i/-a/-g options, remove said options from help message. Correct
the description of -A and -U in the man page (had been interchanged).

--- a/sox.1
+++ b/sox.1
@@ -1228,7 +1228,7 @@ to the input encoding type.
 .TP
 \fB\-s\fR\^/\fB\-u\fR\^/\fB\-f\fR\^/\fB\-A\fR\^/\fB\-U\fR\^/\fB\-o\fR\^/\fB\-i\fR\^/\fB\-a\fR\^/\fB\-g\fR
 Deprecated aliases for specifying the encoding types
-\fBsigned-integer\fR, \fBunsigned-integer\fR, \fBfloating-point\fR, \fBmu-law\fR, \fBa-law\fR, \fBoki-adpcm\fR, \fBima-adpcm\fR, \fBms-adpcm\fR, \fBgsm-full-rate\fR
+\fBsigned-integer\fR, \fBunsigned-integer\fR, \fBfloating-point\fR, \fBa-law\fR, \fBmu-law\fR, \fBoki-adpcm\fR, \fBima-adpcm\fR, \fBms-adpcm\fR, \fBgsm-full-rate\fR
 respectively (see
 .B \-e
 above).
