--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,26 @@ Previously deprecated features that have been removed in this release:
   -------  ----------------------  ----------------------
   14.3.0   O --interactive         --no-clobber
 
+Previously deprecated features (to be removed in future):
+
+  Deprec-  Feature    [O(ption)]                           Removal
+  ated in  [F(ormat)] [E(ffect)]   Replacement             due after
+  -------  ----------------------  ----------------------  -------
+  14.3.1   F mp3: lame 3.97        lame > 3.97             14.3.2
+  14.3.1   F sndfile: sndfile 1.0.11 sndfile > 1.0.11      14.3.1
+  14.3.0   F flac: libFLAC 1.1.2,3 libFLAC > 1.1.3         14.3.1
+  14.3.0   PLAY_RATE_ARG           SOX_OPTS                (now)
+  14.3.0   E norm -b, norm -i      gain -B, gain -en       (now)
+  14.3.0   E filter                ~=sinc                  (now)
+  14.3.0   O -1/-2/-3/-4/-8        -b                      14.4.0
+  14.3.0   O -s/-u/-f              -e                      14.4.0
+  14.3.0   O -A/-U/-o/-i/-a/-g     -e                      14.4.0
+  14.2.0   E key alias             pitch                   (now)
+  14.2.0   E pan                   ~= mixer/remix          (now)
+  14.1.0   E resample alias        rate                    (now)
+  14.1.0   E polyphase alias       rate                    (now)
+  14.1.0   E rabbit alias          rate                    (now)
+
 File formats:
 
   o Mention in man pages that WAV files support floating point encodings.
