Remove deprecated "key" effect (alias of pitch)

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@ Previously deprecated features that have been removed in this release:
   ated in  [F(ormat)] [E(ffect)]   Replacement
   -------  ----------------------  ----------------------
   14.3.0   O --interactive         --no-clobber
+  14.2.0   E key alias             pitch
   14.1.0   E resample alias        rate
   14.1.0   E polyphase alias       rate
   14.1.0   E rabbit alias          rate
@@ -31,7 +32,6 @@ Previously deprecated features (to be removed in future):
   14.3.0   O -1/-2/-3/-4/-8        -b                      14.4.0
   14.3.0   O -s/-u/-f              -e                      14.4.0
   14.3.0   O -A/-U/-o/-i/-a/-g     -e                      14.4.0
-  14.2.0   E key alias             pitch                   (now)
   14.2.0   E pan                   ~= mixer/remix          (now)
 
 File formats:
