--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@ Previously deprecated features that have been removed in this release:
   14.3.0   O --interactive         --no-clobber
   14.3.0   E filter                ~=sinc
   14.3.0   E norm -b, norm -i      gain -B, gain -en
+  14.3.0   PLAY_RATE_ARG           SOX_OPTS
   14.2.0   E key alias             pitch
   14.2.0   E pan                   ~= mixer/remix
   14.1.0   E resample alias        rate
@@ -29,7 +30,6 @@ Previously deprecated features (to be removed in future):
   14.3.1   F mp3: lame 3.97        lame > 3.97             14.3.2
   14.3.1   F sndfile: sndfile 1.0.11 sndfile > 1.0.11      14.3.1
   14.3.0   F flac: libFLAC 1.1.2,3 libFLAC > 1.1.3         14.3.1
-  14.3.0   PLAY_RATE_ARG           SOX_OPTS                (now)
   14.3.0   O -1/-2/-3/-4/-8        -b                      14.4.0
   14.3.0   O -s/-u/-f              -e                      14.4.0
   14.3.0   O -A/-U/-o/-i/-a/-g     -e                      14.4.0
