fir effect: support for --plot

--- a/sox.1
+++ b/sox.1
@@ -2140,12 +2140,14 @@ with coefs.txt containing
 .EX
    # HP filter
    # freq=10000
-     1.2311233052619888e-01
-    \-4.4777096106211783e-01
-     5.1031563346705155e-01
-    \-6.6502926320995331e-02
+     1.2311233052619888e\-01
+    \-4.4777096106211783e\-01
+     5.1031563346705155e\-01
+    \-6.6502926320995331e\-02
    ...
 .EE
+.SP
+This effect supports the \fB\-\-plot\fR global option.
 .TP
 \fBflanger\fR [\fIdelay depth regen width speed shape phase interp\fR]
 Apply a flanging effect to the audio.
