--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@ Previously deprecated features that have been removed in this release:
   14.1.0   E polyphase alias       rate
   14.1.0   E rabbit alias          rate
   14.3.1   F sndfile: sndfile 1.0.11 sndfile > 1.0.11
+  14.3.0   F flac: libFLAC < 1.1.3 libFLAC >= 1.1.3
 
 Previously deprecated features (to be removed in future):
 
@@ -29,7 +30,6 @@ Previously deprecated features (to be removed in future):
   ated in  [F(ormat)] [E(ffect)]   Replacement             due after
   -------  ----------------------  ----------------------  -------
   14.3.1   F mp3: lame 3.97        lame > 3.97             14.3.2
-  14.3.0   F flac: libFLAC 1.1.2,3 libFLAC > 1.1.3         14.3.1
   14.3.0   O -1/-2/-3/-4/-8        -b                      14.4.0
   14.3.0   O -s/-u/-f              -e                      14.4.0
   14.3.0   O -A/-U/-o/-i/-a/-g     -e                      14.4.0
