repeat effect: document behaviour if no argument is given
The argument to repeat is optional, and not giving it means repeating
once. Document this (unchanged) behaviour in the man page and in the
usage message.

--- a/sox.1
+++ b/sox.1
@@ -2960,8 +2960,8 @@ and
 .B swap
 for similar effects.
 .TP
-\fBrepeat \fIcount\fR
-Repeat the entire audio \fIcount\fR times.
+\fBrepeat\fR [\fIcount\fR (1)]
+Repeat the entire audio \fIcount\fR times, or once if \fIcount\fR is not given.
 Requires temporary file space to store the audio to be repeated.
 Note that repeating once yields two copies: the original audio and the
 repeated audio.
