--- a/ChangeLog
+++ b/ChangeLog
@@ -17,13 +17,20 @@ Previously deprecated features that have been removed in this release:
   14.3.0   E norm -b, norm -i      gain -B, gain -en
   14.3.0   PLAY_RATE_ARG           SOX_OPTS
   14.2.0   E key alias             pitch
-  14.2.0   E pan                   ~= mixer/remix
+  14.2.0   E pan                   ~= remix
   14.1.0   E resample alias        rate
   14.1.0   E polyphase alias       rate
   14.1.0   E rabbit alias          rate
   14.3.1   F sndfile: sndfile 1.0.11 sndfile > 1.0.11
   14.3.0   F flac: libFLAC < 1.1.3 libFLAC >= 1.1.3
   14.3.1   F mp3: lame 3.97        lame > 3.97
+
+Newly deprecated features (to be removed in future):
+
+  Deprec-  Feature    [O(ption)]                           Removal
+  ated in  [F(ormat)] [E(ffect)]   Replacement             due after
+  -------  ----------------------  ----------------------  -------
+  14.4.0   E mixer                 remix                   14.4.0 + 1 year
 
 Previously deprecated features (to be removed in future):
 
