Make oops an alias of remix
oops used to be an alias of the mixer effect that is now deprecated.
Make it an alias of remix instead.

--- a/sox.1
+++ b/sox.1
@@ -2477,6 +2477,7 @@ Mixes stereo to twin-mono where each mono channel contains the
 difference between the left and right stereo channels.
 This is sometimes known as the `karaoke' effect as it often has the effect
 of removing most or all of the vocals from a recording.
+It is equivalent to \fBremix 1,2i 1,2i\fR.
 .TP
 \fBoverdrive\fR [\fIgain\fR(20) [\fIcolour\fR(20)]]
 Non linear distortion.
