fade/gain/remix: drain only complete wide samples
Let the fade, gain, and repeat effects be drain()ed only in complete
wide samples. Fixes bug 3420899 (gain -n truncates output if number of
channels not a power of two).

Probably silence needs to be changed, too, but it is broken anyway.

--- a/ChangeLog
+++ b/ChangeLog
@@ -80,6 +80,8 @@ Effects:
   o Stricter syntax checking for several effects (might reveal bugs hidden
     in existing scripts). (Ulrich Klauer)
   o Calculate output audio length for most effects. (Ulrich Klauer)
+  o Fix problems with several effects when the buffer size was not evenly
+    divisible by the number of channels. [3420899] (Ulrich Klauer)
 
 Misc:
 
