--- a/ChangeLog
+++ b/ChangeLog
@@ -56,6 +56,8 @@ Audio device drivers:
     volume control. (cbagwell)
   o Fix but when specifying OSX coreaudio device name.  Would only
     search for first 3 devices. (cbagwell)
+  o Support enabling play/rec mode when user invokes sox as either
+    play or play.exe on windows. (cbagwell)
 
 Effects:
 
