--- a/NEWS
+++ b/NEWS
@@ -1,33 +1,6 @@
-We are happy to announce the release of SoX 14.3.2.
- 
-Source code, Win32 binaries in ZIP archive, Win32 Installer, and 
-Mac OS X binaries can be downloaded from:
+Highlights for this release include:
 
-  https://sourceforge.net/projects/sox/files/sox/14.3.2
- 
-Primarily a maintenance release, highlights include:
-
-  o Seek support for MP3 files.
-  o Fix WavPack header bugs.
-  o Fix length error in 24-bit RIFF files.
-  o Add default channel mapping to 24-bit RIFF files.
-  o Fix ffmpeg crashes on some CPU's.
-  o Read wider range of WAV files with chunks embedded.
-  o Fix incorrect MP3 length determination with some VBR files
-    with initial silence.
-  o Fix segfaults on Mac OS X playback.  Recording now works on OSX.  
-  o Allow specifying non-default audio device on OS X.
-  o Enable LADSPA support by default on all platforms if libltdl exists.
-  o Allow now legend on spectrogram.
-  o Fix -w option on stat effect.
-  o Support specifying absolute end position instead of offset from
-    beginning of trim operation.
-  o Various fixes and improvements related to compiling.
+ * TODO
 
 For the complete list of changes, see the ChangeLog at
-  http://sox.cvs.sourceforge.net/sox/sox/ChangeLog?revision=SOX_14_3_2
-
-Thanks to all who contributed to this release.
-
-- The developers.
-
+  http://sox.git.sourceforge.net/git/gitweb.cgi?p=sox/sox;a=blob;f=ChangeLog
