--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@ Change History
 This file contains a list of all changes starting after the release of
 sox-11gamma, followed by a list of prior authors and features.
 
+sox-14.4.1	20xx-xx-xx
+----------
+
+
 sox-14.4.0	2012-03-04
 ----------
 
