--- a/sox.1
+++ b/sox.1
@@ -2007,9 +2007,7 @@ Adds `cues' to 44\*d1kHz stereo (i.e. audio CD format) audio so that
 when listened to on headphones the stereo image is
 moved from inside
 your head (standard for headphones) to outside and in front of the
-listener (standard for speakers).  See
-http://www.geocities.com/beinges
-for a full explanation.
+listener (standard for speakers).
 .TP
 \fBecho \fIgain-in gain-out\fR <\fIdelay decay\fR>
 Add echoing to the audio.
