--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,11 @@ Previously deprecated features (to be removed in future):
   -------  ----------------------  ----------------------  -------
   14.4.0   E mixer                 remix                   2013-03-04
 
+Internal improvements:
+
+  o Speed optimization for effects that operate on channels
+    independently. (Ulrich Klauer)
+
 
 sox-14.4.1	20xx-xx-xx
 ----------
