--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,23 @@ sox-11gamma, followed by a list of prior authors and features.
 sox-14.4.1	20xx-xx-xx
 ----------
 
+Previously deprecated features that have been removed in this release:
+
+  Deprec-  Feature    [O(ption)]
+  ated in  [F(ormat)] [E(ffect)]   Replacement
+  -------  ----------------------  ----------------------
+
+Previously deprecated features (to be removed in future):
+
+  Deprec-  Feature    [O(ption)]                           Removal
+  ated in  [F(ormat)] [E(ffect)]   Replacement             due after
+  -------  ----------------------  ----------------------  -------
+  14.4.0   E mixer                 remix                   2013-03-04
+  14.4.0   E swap with parameters  remix                   14.4.0
+  14.3.0   O -1/-2/-3/-4/-8        -b                      14.4.0
+  14.3.0   O -s/-u/-f              -e                      14.4.0
+  14.3.0   O -A/-U/-o/-i/-a/-g     -e                      14.4.0
+
 
 sox-14.4.0	2012-03-04
 ----------
@@ -116,6 +133,7 @@ Internal improvements:
   o Fix compiler warnings. (Cristian Morales Vega [P. 3072301], Doug Cook)
   o Improve large file support by using 64-bit numbers to count
     samples. (Doug Cook, Thor Andreassen, Ulrich Klauer)
+
 
 sox-14.3.2	2011-02-27
 ----------
